--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Our Team</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Our Team</h1>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="members-cards"></div>
+        </div>
+    </section>
 
     <script src="./js/app.js"></script>
 </body>
