--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Our Team</h1>
+        <div class="container">
+            <h1>Our Team</h1>
+        </div>
     </header>
 
     <section>
