--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container-sm">
             <h1>Our Team</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit pariatur ipsam, repellendus odit iusto quia!</p>
         </div>
     </header>
 
